<resources>
    <string name="app_name">IamAt</string>
    <string name="signin_email">Email ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="reenter_password">Re-Enter Password</string>
    <string name="username">User Name</string>
    <string name="status">Status</string>
    <string name="saveprofile">Save Profile</string>
    <string name="userprofile_contentdescription">user profile picture</string>
    <string name="signout">Sign Out</string>
    <string name="title">Iam At</string>
</resources>
