<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:gravity="center"
    android:id="@+id/singup_fragment"
    >

    <EditText
        android:id="@+id/signup_emailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signin_email"/>
    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"/>
    <EditText
        android:id="@+id/signup_reenter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/reenter_password"/>
    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/signup"
        android:gravity="center_horizontal"
        android:background="@color/colorPrimary"/>

</LinearLayout>